# cube-timer

./: pyproject.toml
src/cubetimer/: common.py  records.py  stats_view.py  training.py  ui.py  utils.py
