[project]
name = "cubetimer"
version = "0.1.0"
description = "Terminal Rubik's cube timer with scramble generation and stats."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Ed", email = "your.email@example.com" }]
license = { text = "MIT" }
dependencies = [
    "pyTwistyScrambler",
    "pandas",
]

[project.scripts]
cubetimer = "cubetimer.ui:main"

[project.optional-dependencies]
dev = ["ruff", "ty", "pytest", "pre-commit"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cubetimer"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C90",
    "SIM",
    "RUF",
    "C4",
]
ignore = [
    "E501",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]

[tool.ty]

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
